--- a/css/friend.css
+++ b/css/friend.css
@@ -28,6 +28,7 @@
 
 .friend__content .friend__name {
     display: block;
+    font-weight: 600;
     margin-bottom: 7px;
 }
 
@@ -47,4 +48,28 @@
 .friend__content .friend__status,
 .friend .chat__timestamp {
     font-size: 12px;
+}
+
+.friend .friend__now-listening {
+    padding: 5px 10px;
+    border-radius: 15px;
+    border: 1px solid #52e084;
+    font-size: 12px;
+}
+
+.friend__now-listening span {
+    opacity: 0.6;
+}
+
+.friend__now-listening i {
+    font-size: 12px;
+}
+
+.friend__add-btn {
+    display: flex;
+    padding: 10px 15px;
+    justify-content: center;
+    align-items: center;
+    background-color: #f5f4f4;
+    border-radius: 5px;
 }
