--- a/css/chat.css
+++ b/css/chat.css
@@ -1,5 +1,16 @@
+.header-wrapper{
+    position: fixed;
+    z-index: 2;
+    top: 0px;
+    width: 100% ;
+    padding: 5px 0px;
+    background-color: white;
+    box-shadow: 0 18px 36px -18px rgba(0,0,0,.3), 0 -12px 36px -8px rgba(0,0,0,.025);
+
+}
+
 .chats-body {
-    padding: 10px 0px;
+    padding: 20px 0px;
 }
 
 .chats-body .header, 
@@ -7,26 +18,75 @@
     padding: 0px 20px;
 }
 
-.chat-screen {
+.chats-body {
     background-image: url("../images/chatBg.png");
     min-height: 100vh;
-    padding-top: 10px;
 }
 
-.chat__write {
+.chat__write--container {
     position: fixed;
-    bottom: 50px;
-    width: 80%;
+    bottom: 0px;
     margin: 0 auto;
     left: 0;
     right: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #fcfcfc;
-    padding: 0px 20px;
+    width: 100%;
+    /* box-shadow: 0 30px 60px -12px rgba(50,50,93,.25), 0 18px 36px -18px rgba(0,0,0,.3), 0 -12px 36px -8px rgba(0,0,0,.025); */
+}
+
+.chat__icon-left {
+    position: absolute;
+    left: 10px;
+}
+
+.chat__icon-right {
+    position: absolute;
+    right: 10px;
+}
+
+.chat__icon {
+    font-size: 18px;
+    transition: opacity 0.3s ease-in-out;
+}
+
+@keyframes float {
+    0% {
+        box-shadow: 0 30px 60px -12px rgba(50,50,93,.25), 0 18px 36px -18px rgba(0,0,0,.3), 0 -12px 36px -8px rgba(0,0,0,.025); 
+    }
+    50% {
+        box-shadow: 0 30px 60px -60px rgba(50,50,93,.25), 0 18px 36px -18px rgba(0,0,0,.3), 0 -12px 36px -8px rgba(0,0,0,.025); 
+    }
+    100% {
+        box-shadow: 0 30px 60px -12px rgba(50,50,93,.25), 0 18px 36px -18px rgba(0,0,0,.3), 0 -12px 36px -8px rgba(0,0,0,.025); 
+    }
+}
+
+.chat__write-input {
+    margin: 0 auto;
+    bottom: 0px;
+    width: 100%;
+    border-radius: 0;
+    padding: 20px 60px;
+    border: none;
+    font-size: 14px;
+    transition: width 0.5s ease-in-out, border-radius 0.5s ease-in,
+    transform 0.5s ease-in-out ;
+}
+
+.chat__write-input:focus {
+    outline: none;
+    width: 80%;
+    margin: 0 auto;
+    transform: translateY(-100px);
     border-radius: 40px;
-    box-shadow: 0 30px 60px -12px rgba(50,50,93,.25), 0 18px 36px -18px rgba(0,0,0,.3), 0 -12px 36px -8px rgba(0,0,0,.025);
+    box-shadow: 0 30px 60px -12px rgba(50,50,93,.25), 0 18px 36px -18px rgba(0,0,0,.3), 0 -12px 36px -8px rgba(0,0,0,.025); 
+    animation: float 2s linear infinite forwards;
+}
+
+.chat__write-input:focus ~ .chat__icon {
+    opacity: 0;
 }
 
 .chat__write i {
@@ -38,15 +98,12 @@
 }
 
 .chat__write-input {
-    padding: 20px 10px;
+    padding: 20px 40px;
     width: 100%;
     border: none; 
     font-size: 14;
 }
 
-.chat__write-input:focus {
-    outline: none;
-}
 
 .chat-screen .chat__messages {
     border-top: 1px solid #f7f7f7;
@@ -55,7 +112,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 0px 20px;
+    padding: 120px 20px;
 }
 
 .chat__messages .chat__timestamp {
@@ -83,10 +140,20 @@
     align-self: flex-end;
 }
 
+@keyframes spin {
+    from{
+        transform: none;
+    }
+    to{
+        transform: rotateY(1turn);
+    }
+}
+
 .incoming-message img{
     width: 40px;
     border-radius: 15px;
     margin-right: 15px;
+    animation: spin 1s linear forwards;
 }
 
 .message .message__bubble {
@@ -112,4 +179,36 @@
 
 .sent-message .message__bubble {
     border-bottom-right-radius: 0;
+}
+
+
+
+@keyframes incomingAnim {
+    from {
+        opacity: 0;
+        transform: translateX(-100px);
+    }
+    to{
+        opacity: 1;
+        transform: none;
+    }
+}
+
+.incoming-message{
+    animation: incomingAnim 0.5s ease-out forwards;
+}
+
+@keyframes sentAnim {
+    from {
+        opacity: 0;
+        transform: translateX(100px);
+    }
+    to{
+        opacity: 1;
+        transform: none;
+    }
+}
+
+.sent-message{
+    animation: sentAnim 0.5s ease-out forwards;
 }
